继续开发 MinHeap类

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,48 @@
         "deque": "c",
         "string": "c",
         "unordered_map": "c",
-        "vector": "c"
+        "vector": "c",
+        "string_view": "c",
+        "minheap.h": "c",
+        "array": "c",
+        "atomic": "c",
+        "cctype": "c",
+        "cinttypes": "c",
+        "clocale": "c",
+        "cmath": "c",
+        "cstdarg": "c",
+        "cstddef": "c",
+        "cstdint": "c",
+        "cstdio": "c",
+        "cstdlib": "c",
+        "cwchar": "c",
+        "cwctype": "c",
+        "exception": "c",
+        "algorithm": "c",
+        "functional": "c",
+        "iterator": "c",
+        "memory": "c",
+        "memory_resource": "c",
+        "numeric": "c",
+        "optional": "c",
+        "random": "c",
+        "system_error": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "fstream": "c",
+        "initializer_list": "c",
+        "iosfwd": "c",
+        "istream": "c",
+        "limits": "c",
+        "new": "c",
+        "ostream": "c",
+        "sstream": "c",
+        "stdexcept": "c",
+        "streambuf": "c",
+        "cfenv": "c",
+        "typeinfo": "c",
+        "mexti_minheap.h": "c"
     },
     "files.exclude": {
         "**/.git": true,
