加入国密SM3 摘要算法. 代码改自 Linux kernel.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,10 @@
         "typeinfo": "c",
         "mexti_minheap.h": "c",
         "stddef.h": "c",
-        "zend_interfaces.h": "c"
+        "zend_interfaces.h": "c",
+        "endian.h": "c",
+        "byteswap.h": "c",
+        "mexti_crypto.h": "c"
     },
     "files.exclude": {
         "**/.git": true,
