完成部分人脸识别库接口整合.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,9 @@
         "zend_interfaces.h": "c",
         "endian.h": "c",
         "byteswap.h": "c",
-        "mexti_crypto.h": "c"
+        "mexti_crypto.h": "c",
+        "zzfacedll.h": "c",
+        "zend_exceptions.h": "c"
     },
     "files.exclude": {
         "**/.git": true,
