--- a/mexti.ini
+++ b/mexti.ini
@@ -1972,3 +1972,12 @@ opcache.huge_code_pages=1
 
 ; List of headers files to preload, wildcard patterns allowed.
 ;ffi.preload=
+
+[mexti]
+; 是否开启人脸检测模块
+mexti.face_on = On;
+; 人脸检测授权模型文件位置
+mexti.face_license = "/usr/local/php/etc";
+; 1:N 最大搜索数目
+mexti.face_serch_num = 5000;
+
