1. 整合指纹算法 2. 优化人脸算法 3. 最小堆再增加 isTop方法用于判断是否处于Heap顶部.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,10 @@
         "byteswap.h": "c",
         "mexti_crypto.h": "c",
         "zzfacedll.h": "c",
-        "zend_exceptions.h": "c"
+        "zend_exceptions.h": "c",
+        "base64.h": "c",
+        "miaxis_api.h": "c",
+        "miaxis_api_id.h": "c"
     },
     "files.exclude": {
         "**/.git": true,
